# docs/swagger.json
@@ -6,7 +6,7 @@
     "paths": {
         "/bots": {
             "get": {
-                "description": "get bots",
+                "description": "get bots with full information",
                 "consumes": [
                     "application/json"
                 ],
@@ -23,7 +23,7 @@
                         "schema": {
                             "type": "array",
                             "items": {
-                                "type": "string"
+                                "$ref": "#/definitions/ssjitsi.BotInfo"
                             }
                         }
                     },
@@ -103,6 +103,31 @@
                             "type": "file"
                         }
                     }
+                }
+            }
+        }
+    },
+    "definitions": {
+        "ssjitsi.BotInfo": {
+            "type": "object",
+            "properties": {
+                "authMethod": {
+                    "type": "string"
+                },
+                "botName": {
+                    "type": "string"
+                },
+                "id": {
+                    "type": "string"
+                },
+                "lastUpdate": {
+                    "type": "string"
+                },
+                "room": {
+                    "type": "string"
+                },
+                "server": {
+                    "type": "string"
                 }
             }
         }
